fixed alignment of drilldown toggle
+ more area to tap your finger on

--- a/components/02-molecules/navbar/_navbar-mobile.scss
+++ b/components/02-molecules/navbar/_navbar-mobile.scss
@@ -75,7 +75,8 @@
   .dropdown__toggle--navbar {
     &.dropdown__toggle--enhanced {
       position: absolute;
-      left: calc(50% - #{2 * $navbar-padding});
+      left: calc(50% - #{3 * $navbar-padding});
+      padding: .35rem $navbar-padding .4rem;
     }
   }
 }
